# recording-angel-websocket

./: .gitignore  README.md  TESTING_README.md  TRANSLATION_README.md  env.example  pyproject.toml  test_gemini.py  test_translation.py  test_websocket.py
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: __init__.py  api_tokens.py  auth.py  health.py  sessions.py  webrtc.py  websocket.py
app/services/: __init__.py  ai_providers.py  assemblyai.py  session_manager.py  translation.py  translation_service_v2.py
app/utils/: __init__.py  time.py
